<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio1.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttons">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_string"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        style="@style/MyButton"
        android:text="@string/bSpotyfyStreamer"
        android:id="@+id/bSpotyfyStreamer"
        android:layout_below="@+id/textView"
        android:onClick="showMsg"/>
    <Button
        style="@style/MyButton"
        android:text="@string/bScoresApp"
        android:id="@+id/bScoresApp"
        android:layout_below="@+id/bSpotyfyStreamer"
        android:onClick="showMsg"/>
    <Button
        style="@style/MyButton"
        android:text="@string/bLibraryApp"
        android:id="@+id/bLibraryApp"
        android:layout_below="@+id/bScoresApp"
        android:onClick="showMsg"/>
    <Button
        style="@style/MyButton"
        android:text="@string/bBuiltItBiger"
        android:id="@+id/bBuiltItBiger"
        android:layout_below="@+id/bLibraryApp"
        android:onClick="showMsg"/>
    <Button
        style="@style/MyButton"
        android:text="@string/bXyzReader"
        android:id="@+id/bXyzReader"
        android:layout_below="@+id/bBuiltItBiger"
        android:onClick="showMsg"/>
    <Button
        style="@style/MyButton"
        android:text="@string/bCapstone"
        android:id="@+id/bCapstone"
        android:layout_below="@+id/bXyzReader"
        android:onClick="showMsg"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
